@@ -145,6 +145,22 @@ boolean OCI_ElemSetNullIndicator(OCI_Elem *elem, OCIInd value)
     return res;
 }
 
+boolean OCI_ElemSetNumberFromString(OCI_Library* pOCILib, OCI_Elem* elem, const char* str, int size, ExceptionSink* xsink) {
+    boolean res = FALSE;
+
+    OCI_CHECK_PTR(pOCILib, OCI_IPC_ELEMENT, elem, FALSE);
+    OCI_CHECK_COMPATQ(pOCILib, elem->con, elem->typinf->cols[0].type == OCI_CDT_NUMERIC, FALSE, xsink);
+
+    res = OCI_NumberConvertStr2(pOCILib, elem->con, (OCINumber*)elem->handle, str, size, NUM_FMT, NUM_FMT_LEN, xsink);
+
+    if (res)
+       OCI_ElemSetNullIndicator(elem, OCI_IND_NOTNULL);
+
+    OCI_RESULT(pOCILib, res);
+
+    return res;
+}
+
 /* ------------------------------------------------------------------------ *
  * OCI_ElemSetNumber
  * ------------------------------------------------------------------------ */
@@ -164,7 +180,8 @@ boolean OCI_ElemSetNumber2(OCI_Library *pOCILib, OCI_Elem  *elem, void *value, u
 
     res = OCI_NumberSet2(pOCILib, elem->con, (OCINumber *) elem->handle, value, size, flag, xsink);
 
-    OCI_ElemSetNullIndicator(elem, OCI_IND_NOTNULL);
+    if (res)
+       OCI_ElemSetNullIndicator(elem, OCI_IND_NOTNULL);
 
     OCI_RESULT(pOCILib, res);
 
